feat: Use BuildConfig to store API_KEY

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,23 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    buildFeatures {
+        buildConfig true
+    }
+    def localProperties = new Properties()
+    def localPropertiesFile = rootProject.file('local.properties')
+    if (localPropertiesFile.exists()) {
+        localProperties.load(localPropertiesFile.newDataInputStream())
+    }
 
     buildTypes {
         release {
             minifyEnabled false
+            buildConfigField "String", "NEWS_API_KEY", "\"${localProperties.getProperty('newsapi.key') ?: ''}\""
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            buildConfigField "String", "NEWS_API_KEY", "\"${localProperties.getProperty('newsapi.key') ?: ''}\""
         }
     }
     compileOptions {
