feat: Added Depedency graph and Network services

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
     alias(libs.plugins.kotlin.compose)
+    id("org.jetbrains.kotlin.kapt")
 }
 
 android {
@@ -16,6 +17,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    kapt {
+        correctErrorTypes = true
     }
     buildFeatures {
         buildConfig true
@@ -61,7 +65,7 @@ dependencies {
     implementation(libs.retrofit)
     implementation(libs.retrofit.converter.gson)
     implementation(libs.dagger)
-    annotationProcessor(libs.dagger.compiler)
+    kapt(libs.dagger.compiler)
     implementation(libs.androidx.navigation.compose)
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
