--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ composeBom = "2025.02.00"
 retrofit = "2.11.0"
 dagger = "2.51"
 navigationCompose = "2.8.8"
+coil = "2.6.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,6 +33,7 @@ retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-
 dagger = { group = "com.google.dagger", name = "dagger", version.ref = "dagger" }
 dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "dagger" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+coil = { group = "io.coil-kt",name = "coil-compose",version.ref ="coil"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
